--- a/LSON/about.html
+++ b/LSON/about.html
@@ -74,8 +74,14 @@
     color: white;
     text-align: center;
     padding: 20px;
-    position: relative;
+    
+    
+
+    position: fixed;
+    left: 0;
+    bottom: 0;
     width: 100%;
+    padding: 1em 0;
 }
     </style>
 </head>
