create new files

--- a/html/index.html
+++ b/html/index.html
@@ -123,13 +123,13 @@
         </div>
     </div>
     <div class="second-white-overlay">
-        <a href="#soccer">Soccer</a>
-        <a href="#rugby">Rugby</a>
-        <a href="#tennis">Tennis</a>
-        <a href="#swimming">Swimming</a>
-        <a href="#boxing">Boxing</a>
-        <a href="#golf">Golf</a>
-        <a href="#cricket">Cricket</a>
+        <a href="soccer.html">Soccer</a>
+        <a href="rugby.html">Rugby</a>
+        <a href="tennis.html">Tennis</a>
+        <a href="swimming.html">Swimming</a>
+        <a href="boxing.html">Boxing</a>
+        <a href="golf.html">Golf</a>
+        <a href="cricket.html">Cricket</a>
     </div>
        
     <div class="image-boxes-container">
