--- a/html/soccer.html
+++ b/html/soccer.html
@@ -13,9 +13,9 @@
         }
 
         .header {
-            background-color: #009688;
+            background-color: #003580; /* Blue */
             padding: 20px;
-            color: white;
+            color: #ffcb05; /* Yellow */
             text-align: center;
             position: sticky;
             top: 0;
@@ -33,7 +33,7 @@
         }
 
         .navigation {
-            background-color: #00695c;
+            background-color: #d21034; /* Red */
             padding: 10px 0;
             text-align: center;
         }
@@ -47,7 +47,7 @@
         }
 
         .navigation a:hover {
-            background-color: #004d40;
+            background-color: #0057a7; /* Darker Blue */
         }
 
         .main-content {
@@ -57,7 +57,7 @@
         }
 
         #soccer, #news, #teams, #fixtures, #results, #standings, #gallery, #videos {
-            background-color: white;
+            background-color: #ffffff; /* White */
             border-radius: 10px;
             box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
             padding: 20px;
@@ -70,13 +70,13 @@
 
         .soccer-header h2, .news-header h2, .teams-header h2, .fixtures-header h2, .results-header h2, .standings-header h2, .gallery-header h2, .videos-header h2 {
             font-size: 2.5em;
-            color: #009688;
+            color: #d21034; /* Red */
             margin-bottom: 10px;
         }
 
         .soccer-header p, .news-header p, .teams-header p, .fixtures-header p, .results-header p, .standings-header p, .gallery-header p, .videos-header p {
             font-size: 1.2em;
-            color: #555;
+            color: #003580; /* Blue */
         }
 
         .content {
@@ -127,9 +127,9 @@
         }
 
         form input[type="text"]:focus {
-            border-color: #009688;
+            border-color: #d21034; /* Red */
             outline: none;
-            box-shadow: 0 2px 8px rgba(0, 150, 136, 0.2);
+            box-shadow: 0 2px 8px rgba(210, 16, 52, 0.2);
         }
 
         form input[type="text"]::placeholder {
@@ -138,7 +138,7 @@
         }
 
         .footer {
-            background-color: #00695c;
+            background-color: #007f00; /* Green */
             color: white;
             text-align: center;
             padding: 10px;
