--- a/LSON/html/soccer.html
+++ b/LSON/html/soccer.html
@@ -190,8 +190,9 @@
                 <article>
                     <h3>Latest Match Results</h3>
                     <p>Namibia vs. Angola: 0:5</p>
-                    <img src=""alt="NamibiavsANGOLA">
-                    <p>Namibia vs. Botswana: 5:4(penalties)</p>
+                    <img src="images/NAMANGO.png"alt="NamibiavsANGOLA">
+                    <p>Namibia vs. Mozambique: 5:4(penalties)</p>
+                    <img src="images/mozabique.png"alt="NamibiavsMozambique">
                 </article>
                 <article>
                     <h3>Upcoming Fixtures</h3>
