--- a/LSON/html/football.html
+++ b/LSON/html/football.html
@@ -169,7 +169,7 @@
     </div>
 
     <div class="navigation">
-        <a href="soccer.html">Soccer</a>
+        <a href="football.html">football</a>
         <a href="rugby.html">Rugby</a>
         <a href="tennis.html">Tennis</a>
         <a href="swimming.html">Swimming</a>
