--- a/LSON/html/index.html
+++ b/LSON/html/index.html
@@ -123,7 +123,7 @@
         </div>
     </div>
     <div class="second-white-overlay">
-        <a href="soccer.html">Soccer</a>
+        <a href="football.html">Football</a>
         <a href="rugby.html">Rugby</a>
         <a href="tennis.html">Tennis</a>
         <a href="swimming.html">Swimming</a>
