Updated home page

--- a/html/index.html
+++ b/html/index.html
@@ -116,10 +116,10 @@
 <body>
     <div class="white-overlay">
         <div class="logo-container">
-            <img src="images/LSON(L).png" alt="L">
-            <img src="images/LSON(S).png" alt="S">
-            <img src="images/LSON(O).png" alt="O">
-            <img src="images/LSON(N).png" alt="N">
+            <img src="../LSON/images/LSON(L).png" alt="L">
+            <img src="../LSON/images/LSON(S).png" alt="S">
+            <img src="../LSON/images/LSON(O).png" alt="O">
+            <img src="../LSON/images/LSON(N).png" alt="N">
         </div>
     </div>
     <div class="second-white-overlay">
@@ -133,10 +133,10 @@
     </div>
        
     <div class="image-boxes-container">
-        <div class="image-box" style="background-image: url('images/Tennis.jpg');"></div>
-        <div class="image-box" style="background-image: url('images/rugby3.jpg');"></div>
-        <div class="image-box" style="background-image: url('images/soccer.jpg');"></div>
-        <div class="image-box" style="background-image: url('images/swimming2.jpg');"></div>
+        <div class="image-box" style="background-image: url('../LSON/images/tennis.jpg');"></div>
+        <div class="image-box" style="background-image: url('../LSON/images/rugby3.jpg');"></div>
+        <div class="image-box" style="background-image: url('../LSON/images/soccer.jpg');"></div>
+        <div class="image-box" style="background-image: url('../LSON/images/swimming2.jpg');"></div>
     </div>
 
     <div class="background-container">
@@ -155,13 +155,13 @@
     <script>
         document.addEventListener("DOMContentLoaded", () => {
             const images = [
-                "images/Tennis.jpg",
-                "images/rugby3.jpg",
-                "images/soccer.jpg",
-                "images/swimming2.jpg",
-                "images/boxing54.jpg",
-                "images/golf2547.jpg",
-                "images/cricket25.jpg"
+                "../LSON/images/tennis.jpg",
+                "../LSON/images/rugby3.jpg",
+                "../LSON/images/soccer.jpg",
+                "../LSON/images/swimming2.jpg",
+                "../LSON/images/boxing54.jpg",
+                "../LSON/images/golf2547.jpg",
+                "../LSON/images/cricket25.jpg"
             ];
             
             const columns = document.querySelectorAll('.column');
