--- a/LSON/html/index.html
+++ b/LSON/html/index.html
@@ -110,8 +110,8 @@
         }
 
         .image-box {
-            width: 80px;
-            height: 80px;
+            width: 200px;
+            height: 170px;
             background-size: cover;
             background-position: center;
             border: 2px solid #333;
@@ -121,6 +121,20 @@
 
         .image-box:hover {
             transform: scale(1.1);
+        }
+
+        .video-box {
+            width: 200px;
+            height: 170px;
+            border: 2px solid #333;
+            border-radius: 10px;
+            overflow: hidden;
+        }
+
+        .video-box img {
+            width: 100%;
+            height: 100%;
+            object-fit: cover;
         }
 
         .footer {
@@ -257,10 +271,10 @@
     </div>
 
     <div class="image-boxes-container">
-        <div class="image-box" style="background-image: url('images/tennis.jpg');"></div>
-        <div class="image-box" style="background-image: url('images/rugby3.jpg');"></div>
-        <div class="image-box" style="background-image: url('images/soccer.jpg');"></div>
-        <div class="image-box" style="background-image: url('images/swimming2.jpg');"></div>
+        <div class="image-box" style="background-image: url('images/avdert 1.gif');"></div>
+        <div class="video-box">
+            <img src="images/hozie.gif" alt="Hozie Gif">
+        </div>
     </div>
 
     <div class="background-container">
