--- a/LSON/html/boxing.html
+++ b/LSON/html/boxing.html
@@ -9,7 +9,7 @@
             margin: 0;
             padding: 0;
             font-family: Arial, sans-serif;
-            background: url('path/to/your/background.jpg') no-repeat center center fixed;
+            background: url('./images/Boxing images/sketch.jpg') no-repeat center center fixed;
             background-size: cover;
             color: #fff;
         }
@@ -175,7 +175,7 @@
     </div>
 
     <div class="navigation">
-        <a href="soccer.html">Soccer</a>
+        <a href="football.html">Soccer</a>
         <a href="rugby.html">Rugby</a>
         <a href="tennis.html">Tennis</a>
         <a href="swimming.html">Swimming</a>
