--- a/LSON/html/index.html
+++ b/LSON/html/index.html
@@ -266,6 +266,8 @@
     <div class="nav-menu">
         <a href="#home">Home</a>
         <a href="#about">About</a>
+        <a href="#ourshop">Our Shop</a>
+        <a href="#newsupdates">News updates</a>
         <a href="#services">Services</a>
         <a href="#contact">Contact</a>
     </div>
