--- a/LSON/html/index.html
+++ b/LSON/html/index.html
@@ -44,6 +44,35 @@
             align-items: center;
             justify-content: center;
             box-shadow: 0 4px 8px rgba(0,0,0,0.1);
+            transition: opacity 1s ease;
+        }
+
+        .white-overlay.hidden {
+            opacity: 0;
+            visibility: hidden;
+        }
+
+        .level-sports-text {
+            position: fixed;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 35%;
+            background: rgba(255, 255, 255, 0.8);
+            z-index: 1;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            font-size: 2em;
+            font-weight: bold;
+            opacity: 0;
+            visibility: hidden;
+            transition: opacity 1s ease;
+        }
+
+        .level-sports-text.visible {
+            opacity: 1;
+            visibility: visible;
         }
 
         .logo-container {
@@ -208,6 +237,11 @@
             <img src="images/LSON(N).png" alt="N">
         </div>
     </div>
+
+    <div class="level-sports-text">
+        LEVEL SPORTS OF NAMIBIA
+    </div>
+
     <div class="second-white-overlay">
         <div class="ticker-wrapper">
             <div class="ticker-content">
@@ -305,6 +339,8 @@
             ];
 
             const columns = document.querySelectorAll('.column');
+            const whiteOverlay = document.querySelector('.white-overlay');
+            const levelSportsText = document.querySelector('.level-sports-text');
 
             function setColumnBackgrounds() {
                 const usedImages = new Set();
@@ -344,6 +380,17 @@
 
             hamburgerMenu.addEventListener('click', () => {
                 navMenu.style.display = navMenu.style.display === 'block' ? 'none' : 'block';
+            });
+
+            // Show/Hide level sports text on scroll
+            window.addEventListener('scroll', () => {
+                if (window.scrollY > 100) {
+                    whiteOverlay.classList.add('hidden');
+                    levelSportsText.classList.add('visible');
+                } else {
+                    whiteOverlay.classList.remove('hidden');
+                    levelSportsText.classList.remove('visible');
+                }
             });
         });
     </script>
