--- a/LSON/html/index.html
+++ b/LSON/html/index.html
@@ -17,6 +17,7 @@
             display: flex;
             height: 100vh;
             width: 100%;
+            margin-top: 260px;
         }
 
         .column {
