--- a/LSON/html/shop.html
+++ b/LSON/html/shop.html
@@ -14,7 +14,7 @@
 }
 
 header {
-    background-color: #333;
+    background: linear-gradient(to right, #C9DABF, #77E4C8);
     color: white;
     text-align: center;
     padding: 1rem 0;
@@ -58,7 +58,7 @@ header {
 }
 
 .product-item button {
-    background-color: #333;
+    background-color: #77E4C8;
     color: white;
     border: none;
     padding: 0.5rem 1rem;
@@ -74,7 +74,7 @@ header {
 </head>
 <body>
     <header>
-        <h1>Sports Shop</h1>
+        <h1>Our Sports Shop</h1>
     </header>
     <main>
         <div id="products" class="product-list">
@@ -87,17 +87,22 @@ header {
         {
             name: 'Soccer Ball',
             price: 19.99,
-            image: 'https://via.placeholder.com/150'
+            image: 'images/shop images/soccer ball.jpg'
         },
         {
             name: 'Basketball',
             price: 24.99,
-            image: 'https://via.placeholder.com/150'
+            image: 'images/shop images/Basket ball.jpg'
         },
         {
             name: 'Tennis Racket',
             price: 49.99,
-            image: 'https://via.placeholder.com/150'
+            image: 'images/shop images/tennis racket.webp'
+        },
+        {
+            name: 'Event Tickets',
+            price: 50.00,
+            image: 'images/shop images/event ticket.jpg'
         },
         // Add more products as needed
     ];
@@ -111,7 +116,7 @@ header {
         productItem.innerHTML = `
             <img src="${product.image}" alt="${product.name}">
             <h2>${product.name}</h2>
-            <p class="price">$${product.price.toFixed(2)}</p>
+            <p class="price">N$${product.price.toFixed(2)}</p>
             <button>Add to Cart</button>
         `;
 
